# crescendo-backend

./: .gitignore  README.md  README.rst  config.example.ini  manage.py  mypy.ini  pyproject.toml
crescendobackend/: asgi.py  urls.py  wsgi.py
crescendobackend/apps/core/: role_authentication.py
crescendobackend/apps/core/migrations/: 0001_initial.py
crescendobackend/apps/core/models/: role.py
crescendobackend/settings/: base.py  development.py  production.py
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/: conf.py  index.rst
scripts/: make.bat  type-check.bat
tests/: test_crescendo_backend.py
