[tool.poetry]
name = "crescendobackend"
version = "0.1.0"
description = ""
authors = ["Simon Cockx <simon@sikanda.be>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.0.7"
configparser = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
sphinx = "^3.1.1"
poetry = "^1.0.9"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
